# fanjam

./: '  .editorconfig  .gitignore  README.md  config.yaml  fly.toml  justfile
.github/: CODEOWNERS
.github/workflows/: client.yaml  playwright.yaml  server.yaml
client/: .env.playwright  .env.prod  .env.test  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
client/src/: App.vue  context.ts  main.ts  sw.ts  worker-configuration.d.ts
client/src/assets/: main.css
client/src/components/: AcceptScheduleShareModal.vue  AnnouncementDetails.vue  AnnouncementViewer.vue  AnnouncementsList.vue  AppRoot.vue  AppShareModal.vue  CategoryLabel.vue  DayPicker.vue  EventDetail.vue  EventDetails.vue  EventPage.vue  EventProgram.vue  EventProgramDay.vue  EventProgramDescription.vue  EventProgramScroller.vue  EventSummaryDrawer.vue  FeedbackCallout.vue  FeedbackDetail.vue  FilterDescription.vue  FilterMenu.vue  HeaderBar.vue  IconButton.vue  InfoPage.vue  LinkButton.vue  LinkShareDialog.vue  LinksList.vue  MainMenu.vue  MainMenuItem.vue  MenuDrawer.vue  MyScheduleBanner.vue  PageViewer.vue  PushNotificationPrompter.vue  ScheduleHeader.vue  ScheduleList.vue  ScheduleShareModal.vue  ScheduleShareOptionsDialog.vue  ScheduleTimeSlot.vue  ScheduleTimeline.vue  ShareDialog.vue  ShareViewFooter.vue  (+3 more)
client/src/composables/: useAppUrl.ts  useDatetimeFormats.ts  useEnvId.ts  useEvents.ts  useFilterQuery.ts  useIncremental.ts  useIncrementalFilter.ts  useIncrementalFilterMap.ts  useIncrementalMap.ts  useInterval.ts  useIsEventStarred.ts  useIsSharedSchedule.ts  usePageMeta.ts  usePushNotifications.ts  useReactiveFilter.ts  useReactiveFilterMap.ts  useReactiveMap.ts  useReadAnnouncements.ts  useRemoteData.ts  useStarredEvents.ts  useUnreadAnnouncements.ts
client/src/plugins/: umami.ts
client/src/router/: index.ts
client/src/utils/: api.ts  calendar.ts  colors.ts  debounce.ts  encoding.ts  env.ts  markdown.ts  query.ts  tags.ts  time.ts  toast.ts  types.ts
client/src/views/: AnnouncementView.vue  AnnouncementsView.vue  AppView.vue  EventView.vue  HomeView.vue  InfoView.vue  PageView.vue  ProgramView.vue  ScheduleView.vue
client/worker/: index.ts  package.json
data/: README.md  ane-dump.sql  demo-dump.sql  pg-dump.nu
data/tools/: clean-dump.nu  common.nu  pg-dump.nu  pg-restore.nu  pg-start.nu
docs/: architecture.d2  architecture.txt  caching.d2  guide.md  load-testing.jmx
fly/: noco-test.toml
infra/: .terraform.lock.hcl  cache.tf  config.yaml  custom_domains.tf  dns.tf  env.enc.yaml  env.tf  firewall.tf  kv.tf  main.tf  neon.tf  outputs.tf  r2.tf  secrets.enc.yaml  upstash.tf  variables.tf  vars.yaml  worker.tf  zone.tf
infra/config/: globals.yaml  secret_env.enc.yaml  secret_globals.enc.yaml
infra/environments/ane/: env.yaml  fly.yaml
infra/environments/ane-demo/: env.yaml  fly.yaml
infra/environments/ane-test/: env.yaml  fly.yaml
infra/environments/ane2026/: env.yaml  fly.yaml
infra/environments/ane2027/: env.yaml  fly.yaml
infra/environments/bugbot/: env.yaml  fly.yaml
infra/environments/demo/: env.yaml  fly.yaml
infra/environments/deploy-test/: env.yaml  fly.yaml
infra/environments/fcc/: env.yaml  fly.yaml
infra/umami/: fly.toml
migrations/committed/: 000001.sql
nocodb/: Caddyfile  Containerfile  build.nu  index.ts  package.json  start.sh  wrangler.toml
playwright/: package-lock.json  package.json  playwright.config.local.ts  playwright.config.ts
playwright/tests/: announcements.spec.ts  calendar-export.spec.ts  common.ts  custom-domain.spec.ts  deep-links.spec.ts  empty-states.spec.ts  errors.spec.ts  event-details.spec.ts  feedback.spec.ts  filter.spec.ts  fixtures.ts  header.spec.ts  info.spec.ts  menu.spec.ts  mock.ts  pages.spec.ts  program.spec.ts  schedule-date.spec.ts  share.spec.ts  siteNav.spec.ts  stale-data.spec.ts  stars.spec.ts  timeline.spec.ts  today.spec.ts
server/: Cargo.toml  wrangler.toml
server/.cargo/: config
server/src/: api.rs  auth.rs  cache.rs  cf.rs  config-spec.json  config.rs  config_docs.json  cors.rs  env.rs  error.rs  http.rs  kv.rs  lib.rs  neon.rs  noco.rs  response.rs  router.rs  sql.rs  store.rs  upstash.rs  url.rs
server/src/noco/: base.rs  client.rs  data.rs  migrate.rs  mod.rs
server/src/noco/migrations/: mod.rs  n1.rs  n2.rs  n3.rs  n4.rs  n5.rs
server/src/noco/migrations/common/: base.rs  client.rs  columns.rs  fields.rs  migration.rs  mod.rs  models.rs  tables.rs  utils.rs  views.rs
server/src/push/: announce.rs  client.rs  encrypt.rs  mod.rs  notification.rs  vapid.rs
tools/: add-app-alias.nu  check-advisory-permissions.nu  check-env-permissions.nu  check-stage-permissions.nu  clear-cache.nu  config.nu  configure-env.nu  configure-secrets.nu  create-deploy-backup.nu  create-env.nu  create-fly-app.nu  create-noco-base.nu  delete-app-alias.nu  delete-app-domain.nu  delete-base.nu  deploy-certs.nu  deploy-noco-cdn.nu  describe-config.nu  edit-config.nu  generate-app-link.nu  get-app-link.nu  get-config.nu  get-creds.nu  get-schema-version.nu  graphile-migrate.nu  http.nu  link-csv-data.nu  list-app-aliases.nu  migrate-env.nu  rollback-migration.nu  run-tofu.nu  seed-data.nu  set-app-domain.nu  set-app-slug.nu  set-noco-token.nu  setup-env.nu  update-secrets.nu  upload-asset.nu
(+36 files in other folders)
