[package]
name = "sparklefish"
version = "0.1.0"
edition = "2024"
authors = ["Lark Aster <lark@lark.gay>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
  "json",
  "macros",
] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
secrecy = "0.10.3"
serde_json = "1.0.140"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
tower-http = { version = "0.6.4", features = ["auth", "cors"] }
futures = "0.3.31"
constant_time_eq = "0.4.2"
base64 = "0.22.1"
wasm-bindgen = "0.2.100"
thiserror = "2.0.12"
blake3 = "1.8.2"
