[package]
name = "sparklefish"
version = "0.1.0"
edition = "2024"
authors = ["Lark Aster <lark@lark.gay>"]
# If you update this, update the GitHub Actions workflow as well.
rust-version = "1.90.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.0", features = ['http', 'axum', 'tokio-postgres'] }
worker-macros = { version = "0.8.0", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
  "json",
  "macros",
] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
secrecy = "0.10.3"
serde_json = "1.0.140"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
# `rand_core` (pulled in by p256 + our push module) depends on
# `getrandom@0.2`, which doesn't enable a wasm32 backend by default. Force the
# `js` feature on the transitively-selected v0.2 so it compiles on Workers.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
tower-http = { version = "0.6.4", features = ["auth", "cors"] }
futures = "0.3.31"
constant_time_eq = "0.4.2"
base64 = "0.22.1"
wasm-bindgen = "0.2.122"
js-sys = "0.3"
thiserror = "2.0.12"
blake3 = "1.8.2"
tokio-postgres = { version = "0.7.13", default-features = false, features = [
  "js",
] }
wasm-bindgen-futures = "0.4.50"
chrono = "0.4.41"
serde_json_canonicalizer = "0.3.1"
# Web Push (RFC 8291 message encryption + RFC 8292 VAPID ES256 JWT).
p256 = { version = "0.13", default-features = false, features = [
  "ecdh",
  "ecdsa",
  "arithmetic",
] }
aes-gcm = { version = "0.10", default-features = false, features = [
  "aes",
  "alloc",
] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
